@@ -46,5 +46,6 @@ bn?.fs: 185408
 lbf.fs: 186208
 cbf.fs: 191232
 log.fs: 197112
+spf.fs: 200808
 
 fina: CompileSize=80186 CompileTime=10714 msec TestTime=24450 msec (without floats)
